adjust the main content so that no scrollbar at bottom is shown and the content is displayed correctly

--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,18 @@ body {
   --bg-primary: #23232e;
   --bg-secondary: #141418;
   --transition-speed: 600ms;
+  --margin-left: 80px;
   /* padding:5rem; */
 }
+
+/* .sympho-container {
+  margin-left: var(--margin-left);
+} */
+
 body::-webkit-scrollbar {
   width: 0.25rem;
-  height: 0.25rem;
+  /* height: 0.25rem; */
+  height: 0rem;
 }
 body::-webkit-scrollbar-track {
   background: #1e1e24;
@@ -19,7 +26,7 @@ body::-webkit-scrollbar-thumb {
   background: #6649b8;
 }
 main {
-  margin-left: 5rem;
+  margin-left: var(--margin-left); 
 }
 
 .navbar {
